--- a/styles/privacy-policy.css
+++ b/styles/privacy-policy.css
@@ -1,23 +1,22 @@
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: 20px;
 }
 
-html,
-body {
+html, body{
     height: 100%;
     background-color: #F6F7F8;
 }
 
-body {
+body{
     display: flex;
     flex-direction: row;
     align-items: stretch;
 }
 
-main {
+main{
     display: flex;
     flex-direction: column;
     align-items: stretch;
