--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,21 +1,20 @@
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
 }
 
-button {
+button{
     cursor: pointer;
     border: unset;
 }
 
-input {
+input{
     border: unset;
 }
 
-html,
-body {
+html, body{
     background-color: #f4f4f4;
     color: #333;
     height: 100%;
@@ -24,29 +23,29 @@ body {
     margin: 0;
 }
 
-html {
+html{
     height: 100vh;
 }
 
 
-.header {
+.header{
     width: 100%;
     height: 150px;
     display: flex;
     justify-content: space-between;
 }
 
-.header-left img {
+.header-left img{
     width: 100px;
     height: 122px;
 }
 
-.header-left {
+.header-left{
     margin-top: 30px;
     margin-left: 50px;
 }
 
-.header-right {
+.header-right{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,7 +56,7 @@ html {
     margin-right: 30px;
 }
 
-main {
+main{
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -65,22 +64,17 @@ main {
     align-items: center;
 }
 
-.content {
+.content{
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.sign-up-title {
-    font-size: 61px;
-    font-weight: 700;
-    font-style: bold;
-    color: black;
-}
 
 
 
-.btn-signup {
+
+.btn-signup{
     color: white;
     background-color: #2A3647;
     width: 110px;
@@ -92,18 +86,18 @@ main {
     font-weight: bold;
 }
 
-.btn-signup:hover {
+.btn-signup:hover{
     background-color: #29ABE2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.btn-signup:disabled {
+.btn-signup:disabled{
     background-color: #bfc5cf;
     cursor: default;
     box-shadow: none;
 }
 
-.btn-guestlogin {
+.btn-guestlogin{
     background-color: white;
     width: 177px;
     height: 48px;
@@ -112,7 +106,7 @@ main {
     cursor: pointer;
 }
 
-.login {
+.login{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -126,7 +120,7 @@ main {
 
 }
 
-.back-to-login {
+.back-to-login{
     width: 32px;
     height: 32px;
     position: absolute;
@@ -138,12 +132,12 @@ main {
     border-radius: 50%;
 }
 
-.back-to-login:hover {
+.back-to-login:hover{
     transform: scale(1.1);
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.login h1 {
+.login h1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -153,7 +147,7 @@ main {
     font-size: 56px;
 }
 
-.login-separater {
+.login-separater{
     background-color: #29ABE2;
     width: 150px;
     height: 2px;
@@ -162,7 +156,7 @@ main {
     border-radius: 3px;
 }
 
-.login-input {
+.login-input{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -172,14 +166,14 @@ main {
     margin-bottom: 10px;
 }
 
-.input-wrapper {
+.input-wrapper{
     width: 422px;
     display: flex;
     flex-direction: column;
     margin-bottom: 8px;
 }
 
-.login-input input {
+.login-input input{
     width: 422px;
     height: 40px;
     padding-left: 15px;
@@ -188,28 +182,28 @@ main {
     border-radius: 8px;
 }
 
-input::placeholder {
+input::placeholder{
     color: #A9A9A9;
 }
 
-input.input-focus:focus {
+input.input-focus:focus{
     outline: none;
     border: 1.5px solid #29ABE2;
     box-shadow: 0 0 1.5px #29ABE2;
 }
 
 /* NEU: Error-State für Inputs */
-input.input-error {
+input.input-error{
     border: 1px solid #ff3d00 !important;
     box-shadow: 0 0 1.5px #ff3d00 !important;
 }
 
-input.input-error:focus {
+input.input-error:focus{
     border-color: #ff3d00 !important;
     box-shadow: 0 0 1.5px #ff3d00 !important;
 }
 
-.error-message {
+.error-message{
     color: #ff3d00;
     font-size: 12px;
     margin-top: 5px;
@@ -218,12 +212,12 @@ input.input-error:focus {
     display: block;
 }
 
-.input-field {
+.input-field{
     position: relative;
     display: flex;
 }
 
-.input-field img {
+.input-field img{
     position: absolute;
     top: 10px;
     right: 10px;
@@ -231,15 +225,15 @@ input.input-error:focus {
     height: 20px;
 }
 
-.is-hidden {
+.is-hidden{
     display: none !important;
 }
 
-.password-toggle {
+.password-toggle{
     cursor: pointer;
 }
 
-.accept-privacy-policy {
+.accept-privacy-policy{
     display: flex;
     justify-content: center;
     padding: 12px;
@@ -247,28 +241,28 @@ input.input-error:focus {
     gap: 8px;
 }
 
-.accept-privacy-policy.input-error {
+.accept-privacy-policy.input-error{
     border: 1px solid #ff3d00;
 }
 
-.accept-privacy-policy a {
+.accept-privacy-policy a{
     color: #29ABE2;
     text-decoration: none;
 }
 
-.accept-privacy-policy input {
+.accept-privacy-policy input{
     width: 50px;
     height: 20px;
     cursor: pointer;
 }
 
-.accept-privacy {
+.accept-privacy{
     margin-bottom: 0 !important;
     width: 18px !important;
     height: 18px !important;
 }
 
-.login-buttons {
+.login-buttons{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -278,23 +272,11 @@ input.input-error:focus {
     margin-top: 8px;
 }
 
-.sign-up-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-    width: 100%;
-    height: 50px;
-    padding: 32px 0 32px 0;
-    margin-top: 64px;
-}
 
-.sign-up-footer a {
-    text-decoration: none;
-    color: grey;
-}
 
-footer {
+
+
+footer{
     margin-top: 50px;
     text-align: center;
     display: flex;
@@ -302,17 +284,17 @@ footer {
     gap: 16px;
 }
 
-footer a {
+footer a{
     color: #a8a8a8;
     text-decoration: none;
     min-width: 120px;
 }
 
-footer a:hover {
+footer a:hover{
     color: #29ABE2;
     font-weight: bold;
 }
 
-.checkbox-text {
+.checkbox-text{
     color: #a8a8a8;
 }
