--- a/styles/privacy-policy.css
+++ b/styles/privacy-policy.css
@@ -14,6 +14,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    overflow: hidden;
 }
 
 main{
@@ -22,4 +23,68 @@ main{
     align-items: stretch;
     flex: 1 1 auto;
     gap: 75px;
+    height: 100vh;
+    overflow: hidden;
+    min-height: 0;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    padding-left: 100px;
+    flex: 1 1 auto;
+    overflow-y: auto;
+    padding-right: 40px;
+    min-height: 0;
+}
+
+.wrapper h1 {
+    font-size: 56px;
+    margin-bottom: 30px;
+}
+
+.wrapper p {
+    margin-bottom: 30px;
+}
+
+@media (max-width: 1250px) {
+    main {
+        padding-bottom: 80px;
+    }
+
+    .wrapper {
+        padding-left: 30px;
+        padding-bottom: 80px;
+    }
+}
+
+
+@media (max-width: 620px) {
+    .wrapper h1 {
+        font-size: 42px;
+    }
+
+    .wrapper h2 {
+        font-size: 18px;
+    }
+
+    .wrapper p {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 500px) {
+    .wrapper h2 {
+        font-size: 16px;
+    }
+
+    .wrapper p {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 400px) {
+    .wrapper h1 {
+        font-size: 36px;
+    }
 }
